{
  "version": 4,
  "terraform_version": "1.11.0",
  "serial": 29,
  "lineage": "a71e305e-1f7d-d3e6-e73d-7aea56360b72",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:187726662576:loadbalancer/app/technova-prod-alb/d8a4d006c27f5ba6",
            "arn_suffix": "app/technova-prod-alb/d8a4d006c27f5ba6",
            "desync_mitigation_mode": "defensive",
            "dns_name": "technova-prod-alb-369970263.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:187726662576:loadbalancer/app/technova-prod-alb/d8a4d006c27f5ba6",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "technova-prod-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-02274734eee291668"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-066b710787bf02877"
              },
              {
                "subnet_id": "subnet-0cf6bf27a9ea55cdb"
              }
            ],
            "subnets": [
              "subnet-066b710787bf02877",
              "subnet-0cf6bf27a9ea55cdb"
            ],
            "tags": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-alb",
              "Project": "technova"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-alb",
              "Project": "technova"
            },
            "vpc_id": "vpc-026cc544c0c118c24",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "module.security_groups.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:187726662576:listener/app/technova-prod-alb/d8a4d006c27f5ba6/5e4387e36a250b4f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:187726662576:targetgroup/technova-prod-tg/1146e9eb0bdbc681",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:187726662576:listener/app/technova-prod-alb/d8a4d006c27f5ba6/5e4387e36a250b4f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:187726662576:loadbalancer/app/technova-prod-alb/d8a4d006c27f5ba6",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-http-listener",
              "Project": "technova"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-http-listener",
              "Project": "technova"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.main",
            "module.alb.aws_lb_target_group.main",
            "module.security_groups.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:187726662576:targetgroup/technova-prod-tg/1146e9eb0bdbc681",
            "arn_suffix": "targetgroup/technova-prod-tg/1146e9eb0bdbc681",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:187726662576:targetgroup/technova-prod-tg/1146e9eb0bdbc681",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "technova-prod-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-tg",
              "Project": "technova"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-tg",
              "Project": "technova"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-026cc544c0c118c24"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:187726662576:security-group/sg-02274734eee291668",
            "description": "Security group for the application load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02274734eee291668",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "technova-prod-alb-sg",
            "name_prefix": "",
            "owner_id": "187726662576",
            "revoke_rules_on_delete": false,
            "tags": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-alb-sg",
              "Project": "technova"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-alb-sg",
              "Project": "technova"
            },
            "timeouts": null,
            "vpc_id": "vpc-026cc544c0c118c24"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:187726662576:security-group/sg-0c54059a2466ecafb",
            "description": "Security group for the web application instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c54059a2466ecafb",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02274734eee291668"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "HTTPS from ALB",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02274734eee291668"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "technova-prod-instance-sg",
            "name_prefix": "",
            "owner_id": "187726662576",
            "revoke_rules_on_delete": false,
            "tags": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-instance-sg",
              "Project": "technova"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-instance-sg",
              "Project": "technova"
            },
            "timeouts": null,
            "vpc_id": "vpc-026cc544c0c118c24"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_groups.aws_security_group.alb",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d49d67267e7abc4d",
            "domain": "vpc",
            "id": "eipalloc-0d49d67267e7abc4d",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-35-155-147-173.us-west-2.compute.amazonaws.com",
            "public_ip": "35.155.147.173",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-eip-1",
              "Project": "technova"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-eip-1",
              "Project": "technova"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08d8b65376eabb6cc",
            "domain": "vpc",
            "id": "eipalloc-08d8b65376eabb6cc",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-44-247-67-85.us-west-2.compute.amazonaws.com",
            "public_ip": "44.247.67.85",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-eip-2",
              "Project": "technova"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-eip-2",
              "Project": "technova"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:187726662576:internet-gateway/igw-083690978f80df16b",
            "id": "igw-083690978f80df16b",
            "owner_id": "187726662576",
            "tags": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-igw",
              "Project": "technova"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-igw",
              "Project": "technova"
            },
            "vpc_id": "vpc-026cc544c0c118c24"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d49d67267e7abc4d",
            "connectivity_type": "public",
            "id": "nat-09aa6338c9838765b",
            "network_interface_id": "eni-02a2302fdf3c0f6c8",
            "private_ip": "10.0.1.242",
            "public_ip": "35.155.147.173",
            "subnet_id": "subnet-0cf6bf27a9ea55cdb",
            "tags": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-nat-1",
              "Project": "technova"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-nat-1",
              "Project": "technova"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08d8b65376eabb6cc",
            "connectivity_type": "public",
            "id": "nat-00aab26bbb4a79b4b",
            "network_interface_id": "eni-099e6edf827f5285e",
            "private_ip": "10.0.2.125",
            "public_ip": "44.247.67.85",
            "subnet_id": "subnet-066b710787bf02877",
            "tags": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-nat-2",
              "Project": "technova"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-nat-2",
              "Project": "technova"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:187726662576:route-table/rtb-0afeab09f154f700a",
            "id": "rtb-0afeab09f154f700a",
            "owner_id": "187726662576",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09aa6338c9838765b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-private-rt-1",
              "Project": "technova"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-private-rt-1",
              "Project": "technova"
            },
            "timeouts": null,
            "vpc_id": "vpc-026cc544c0c118c24"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:187726662576:route-table/rtb-02987082257631627",
            "id": "rtb-02987082257631627",
            "owner_id": "187726662576",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00aab26bbb4a79b4b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-private-rt-2",
              "Project": "technova"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-private-rt-2",
              "Project": "technova"
            },
            "timeouts": null,
            "vpc_id": "vpc-026cc544c0c118c24"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:187726662576:route-table/rtb-0eb1478a4099acf74",
            "id": "rtb-0eb1478a4099acf74",
            "owner_id": "187726662576",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-083690978f80df16b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-public-rt",
              "Project": "technova"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-public-rt",
              "Project": "technova"
            },
            "timeouts": null,
            "vpc_id": "vpc-026cc544c0c118c24"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0473cbf5c31fa7bc4",
            "route_table_id": "rtb-0afeab09f154f700a",
            "subnet_id": "subnet-0de5df8832d0d1e70"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02c70771cd9b22d59",
            "route_table_id": "rtb-02987082257631627",
            "subnet_id": "subnet-0a3a9b5dbef98afad"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-099f624664daa1361",
            "route_table_id": "rtb-0eb1478a4099acf74",
            "subnet_id": "subnet-0cf6bf27a9ea55cdb"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0922710ab558e8896",
            "route_table_id": "rtb-0eb1478a4099acf74",
            "subnet_id": "subnet-066b710787bf02877"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:187726662576:subnet/subnet-0de5df8832d0d1e70",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0de5df8832d0d1e70",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "187726662576",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-private-subnet-1",
              "Project": "technova"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-private-subnet-1",
              "Project": "technova"
            },
            "vpc_id": "vpc-026cc544c0c118c24"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:187726662576:subnet/subnet-0a3a9b5dbef98afad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a3a9b5dbef98afad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "187726662576",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-private-subnet-2",
              "Project": "technova"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-private-subnet-2",
              "Project": "technova"
            },
            "vpc_id": "vpc-026cc544c0c118c24"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:187726662576:subnet/subnet-0cf6bf27a9ea55cdb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cf6bf27a9ea55cdb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "187726662576",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-public-subnet-1",
              "Project": "technova"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-public-subnet-1",
              "Project": "technova"
            },
            "vpc_id": "vpc-026cc544c0c118c24"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:187726662576:subnet/subnet-066b710787bf02877",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-066b710787bf02877",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "187726662576",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-public-subnet-2",
              "Project": "technova"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-public-subnet-2",
              "Project": "technova"
            },
            "vpc_id": "vpc-026cc544c0c118c24"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:187726662576:vpc/vpc-026cc544c0c118c24",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02a61003f25ee0b50",
            "default_route_table_id": "rtb-02e1cd681066479e5",
            "default_security_group_id": "sg-0ea2ac3f26b7a342d",
            "dhcp_options_id": "dopt-00a6d7aaeda4a3199",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-026cc544c0c118c24",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02e1cd681066479e5",
            "owner_id": "187726662576",
            "tags": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-vpc",
              "Project": "technova"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "prod",
              "Name": "technova-prod-vpc",
              "Project": "technova"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}